fix some layout issues

--- a/src/components/NavItem/NavItem.less
+++ b/src/components/NavItem/NavItem.less
@@ -1,7 +1,7 @@
 .nav-item {
   text-align: center;
   cursor: pointer;
-  padding: 5px;
+  padding: 5px 10px;
   border-radius: 3px;
   &:hover {
     box-shadow: 0 4px 2px -2px skyblue;
