--- a/src/components/Simulator/App.less
+++ b/src/components/Simulator/App.less
@@ -166,10 +166,10 @@ h4 {
   .absolute();
   top: 0;
   right: 0;
-  width: 180px;
+  width: 250px;
   .sidebar-content {
     height: calc(100vh - 45px);
-    width: 180px;
+    width: 250px;
     float: right;
     background-color: rgba(0, 0, 0, 0.8);
     overflow: auto;
