--- a/src/templates/Navigation.less
+++ b/src/templates/Navigation.less
@@ -8,14 +8,7 @@
       min-height: calc(100vh - 40px);
 }
 
-.scenarios-wrapper > .nav:nth-of-type(2) {
-  width: 100%;
-  padding: 15px;
-  justify-content: flex-start;
-}
-
 .scenarios-wrapper > .nav:nth-of-type(2) > a, .nav-item {
-  padding: 5px 15px;
   white-space:nowrap;
 }
 
